# BSc_Thesis

./: CMakeLists.txt  README.md
src/: Combine.cpp  Combine.td  GraphNodes.h  NodesFactory.h  Ops.td  TreeNodes.h  dialect.cpp  dialect.h  main.cpp  testscript.sh
tests/: test1.jq  test10.jq  test11.jq  test12.jq  test13.jq  test14.jq  test15.jq  test16.jq  test17.jq  test18.jq  test19.jq  test2.jq  test20.jq  test21.jq  test22.jq  test23.jq  test24.jq  test25.jq  test26.jq  test27.jq  test28.jq  test29.jq  test3.jq  test30.jq  test31.jq  test32.jq  test33.jq  test34.jq  test35.jq  test36.jq  test37.jq  test38.jq  test39.jq  test4.jq  test40.jq  test41.jq  test42.jq  test43.jq  test44.jq  test45.jq  (+10 more)
